# taskflow

./: .gitignore  API_CONTRACT.md  eslint.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json
.github/: copilot-instructions.md
.lovable/: plan.md
49/4c83ca8f3f/: metadata.json
60/6e936dde72/: metadata.json
_bmad-output/: project-context.md
backend/: README.md  alembic.ini  pyinstaller_entrypoint.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260216_0001_create_members_table.py  20260217_0002_add_tasks_table.py  20260226_0003_add_sub_tasks_table.py  20260226_0004_add_sub_tasks_task_position_unique_constraint.py  20260227_0005_drop_sub_tasks_task_id_index.py  20260228_0006_add_daily_updates_table.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py  common.py  daily_updates.py  health.py  members.py  settings.py  subtasks.py  tasks.py
backend/app/core/: config.py  exceptions.py  security.py
backend/app/crud/: daily_update.py  member.py  subtask.py  task.py
backend/app/db/: migrations.py  session.py
backend/app/models/: __init__.py  daily_update.py  member.py  subtask.py  task.py
backend/app/schemas/: base.py  daily_update.py  health.py  member.py  settings.py  subtask.py  task.py
backend/scripts/: dev.sh  test.sh
backend/tests/: test_daily_updates.py  test_health.py  test_members.py  test_security.py  test_settings.py  test_subtasks.py  test_tasks.py
docs/: task_flow_master_doc.md
taskflow-ui/: package-lock.json  package.json  tailwind.config.ts
(+277 files in other folders)
