[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4,<2.0.0",
    "cryptography>=46.0.5,<47.0.0",
    "fastapi>=0.129.0,<0.130.0",
    "psycopg2-binary>=2.9.11,<3.0.0",
    "pydantic>=2.12.0,<3.0.0",
    "pydantic-settings>=2.12.0,<3.0.0",
    "sqlalchemy>=2.0.46,<2.1.0",
    "uvicorn[standard]>=0.40.0,<1.0.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1,<1.0.0",
    "pytest>=9.0.2,<10.0.0",
]
